--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
-h1 {
-    color: #00f;
+body {
+    background-color: rgb(226, 226, 226);
+}
+
+#header {
+    position: relative;
+    display: table;
+    width: 100%;
+    height: 100px;
+    margin: 0 auto;
+    border: dashed 2px rgb(126, 126, 126);
+}
+
+#header h1 {
+    display: table-cell;
+	width: 100%;
+    text-align: center;
+    vertical-align: middle;
+
+    color: rgb(67, 67, 67);
+    text-shadow: 1px 1px 2px silver;
+    font-family: "HGP創英角ｺﾞｼｯｸUB";
+    font-size: 50px;
 }
