--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
-body {
+body
+{
     background-color: rgb(226, 226, 226);
 }
 
-#header {
+header
+{
     position: relative;
     display: table;
-    width: 100%;
-    height: 100px;
+    width:  95%;
+    height: 160px;
     margin: 0 auto;
-    border: dashed 2px rgb(126, 126, 126);
+    background-image: linear-gradient(350deg, rgba(13, 124, 197, 1), rgba(0, 47, 140, 1));
 }
-
-#header h1 {
+h1
+{
     display: table-cell;
 	width: 100%;
     text-align: center;
@@ -19,6 +21,84 @@ body {
 
     color: rgb(67, 67, 67);
     text-shadow: 1px 1px 2px silver;
-    font-family: "HGP創英角ｺﾞｼｯｸUB";
+    font-family: "Comic Sans MS";
     font-size: 50px;
+}
+
+button
+{
+    display: block;
+	text-align: center;
+	text-decoration: none;
+	
+	padding: 0.4rem 1.2rem;
+	font-weight: bold;
+	border: 1px solid #27acd9;
+	background: #27acd9;
+	color: #fff;
+	border-radius: 100vh;
+	transition: 0.5s;
+
+	position:relative;
+	left:0px;
+	top:3px;
+}
+button:hover
+{
+	color: #27acd9;
+	background: #fff;
+}
+/*歯車アイコン背景*/
+button.outer
+{
+	padding: 0.2rem 0.4rem;
+	position:relative;
+	left:0px;
+	top:5px;
+}
+/*歯車アイコン*/
+button.outer img
+{
+	width: 20px;
+}
+
+button.notification
+{
+	position:relative;
+	left:0px;
+	top:0px;
+}
+button.measurement
+{
+	position:relative;
+	top:5px;
+}
+body.week{
+	font-size: 1000px;
+}
+/*レスポンシブ*/
+@media screen and (max-width: 600px) {
+
+	body{
+		font-size: 25px;
+	}
+	button{
+		font-size: 20px;
+	}
+
+}
+@media (min-width: 601px) and (max-width: 1034px) {
+    body{
+		font-size: 35px;
+	}
+	button{
+		font-size: 25px;
+	}
+	button.outer{
+		font-size: 25px;
+	}
+	button.outer img
+	{
+		width: 35px;
+	}
 }
