--- a/style.css
+++ b/style.css
@@ -1,24 +1,154 @@
-body {
-    background-color: rgb(226, 226, 226);
+body
+{
+    background-color: rgb(153, 218, 249);
+}
+.center {
+    text-align: center;
 }
 
 #header {
     position: relative;
     display: table;
-    width: 100%;
-    height: 100px;
+    width:  95%;
+    height: 160px;
     margin: 0 auto;
-    border: dashed 2px rgb(126, 126, 126);
+    background-image: linear-gradient(350deg, rgb(108, 189, 255), rgb(95, 199, 255));
+	/*<h1>pwa</h1>を<header>で囲むとグラデーションの背景がつく*/
 }
-
-#header h1 {
+h1
+{
     display: table-cell;
 	width: 100%;
     text-align: center;
     vertical-align: middle;
 
-    color: rgb(67, 67, 67);
+    color: rgb(255, 255, 255);
     text-shadow: 1px 1px 2px silver;
-    font-family: "HGP創英角ｺﾞｼｯｸUB";
+    font-family: "Comic Sans MS";
     font-size: 50px;
+}
+
+.switch-checkbox {
+    margin-bottom: 0rem;
+}
+
+.switch-checkbox input[type=checkbox] {
+    position: relative;
+    cursor: pointer;
+    width: 3.5rem;
+    height: 1.9rem;
+    margin-top: 0.2rem;
+    border-radius: 60px;
+    background-color: #ddd;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    vertical-align: middle;
+    transition: .5s;
+}
+
+.switch-checkbox input[type=checkbox]::before {
+    position: absolute;
+    top: .2rem;
+    left: .2rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    box-sizing: border-box;
+    border-radius: 50%;
+    background: white;
+    color: black;
+    content: '';
+    transition: .3s ease;
+}
+
+.switch-checkbox input[type=checkbox]:checked {
+    background: #1ff210;
+}
+
+.switch-checkbox input[type=checkbox]:checked::before {
+    left: 1.8rem;
+}
+
+.switch-checkbox label {
+    margin-left: 1rem;
+}
+/*ボタン全体の設定
+	個別で変えたい場合はclassを付けて*/
+button
+{
+    display: block;
+	text-align: center;
+	text-decoration: none;
+	
+	padding: 0.4rem 1.2rem;
+	font-weight: bold;
+	border: 1px solid #27acd9;
+	background: #27acd9;
+	color: #fff;
+	border-radius: 100vh;
+	transition: 0.5s;
+
+	position:relative;
+	left:0px;
+	top:3px;
+}
+button:hover
+{
+	color: #27acd9;
+	background: #fff;
+}
+/*歯車アイコン背景*/
+button.outer
+{
+	padding: 0.2rem 0.4rem;
+	position:relative;
+	left:0px;
+	top:5px;
+}
+/*歯車アイコン*/
+button.outer img
+{
+	width: 20px;
+	/*<img src="images/geara.png" alt="Dinosaur">をindex.htmlの
+	116か117あたりの<button type="button" onclick="location.href='./config.html'" class="outer">の下の行に入れる
+	画像のダウンロードを忘れずに*/
+}
+/*通知を送信ボタンの位置調整*/
+button.notification
+{
+	position:relative;
+	left:0px;
+	top:0px;
+}
+/*テストなので気にせずに
+button.measurement
+{
+	position:relative;
+	top:5px;
+}*/
+
+/*レスポンシブ*/
+@media screen and (max-width: 600px) {
+
+	body{
+		font-size: 25px;
+	}
+	button{
+		font-size: 20px;
+	}
+	/*スマホ*/
+}
+@media (min-width: 601px) and (max-width: 1034px) {
+    body{
+		font-size: 35px;
+	}
+	button{
+		font-size: 25px;
+	}
+	/*歯車の画像のサイズ調整*/
+	button.outer img
+	{
+		width: 35px;
+	}
+	/*タブレット*/
 }
