--- a/style.css
+++ b/style.css
@@ -152,3 +152,20 @@ button.measurement
 	}
 	/*タブレット*/
 }
+
+#settingButton{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.space{
+	margin-left: 30px;
+	margin-left: 30px;
+}
+#settingDiscardingButton{
+	border: 1px solid #d92727;
+	background: #d92727;
+}
+#message{
+	transition: opacity 3s ease-in;
+}
