--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: rgb(153, 218, 249);
+    background-color: rgb(253, 253, 255);
 }
 .center {
     text-align: center;
@@ -15,7 +15,7 @@ body
     width:  95%;
     height: 160px;
     margin: 0 auto;
-    background-image: linear-gradient(350deg, rgb(108, 189, 255), rgb(95, 199, 255));
+    background-image: linear-gradient(350deg, rgb(14, 12, 24), rgb(113, 103, 205));
 	/*<h1>pwa</h1>を<header>で囲むとグラデーションの背景がつく*/
 }
 h1
@@ -170,5 +170,10 @@ button.measurement
 	background: #d92727;
 }
 #message{
+	font-size: clamp(2.4rem, calc(2.2rem + 0.625vw), 2.9rem);
+}
+.msg{
 	transition: opacity 3s ease-in;
+	color: #fff;
+	font-size: clamp(2.4rem, calc(2.2rem + 0.625vw), 2.9rem);
 }
